deploy/blog/blog-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog
      version: "1.0"
  template:
    metadata:
      labels:
        app: blog
        version: "1.0"
    spec:
      containers:
      - name: blog-app
        image: blog
        resources:
          requests:
            memory: "256Mi"
            cpu: "500m"
          limits:
            memory: "512Mi"
            cpu: "1"
        ports:
        - name: http
          containerPort: 8080
        readinessProbe:
          httpGet:
            path: /management/health
            port: http
          initialDelaySeconds: 20
          periodSeconds: 15
          failureThreshold: 6
        livenessProbe:
          httpGet:
            path: /management/health
            port: http
          initialDelaySeconds: 120
