deploy/blog/blog-mysql.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: blog-mysql
  namespace: default
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: blog-mysql
    spec:
      volumes:
      - name: data
        emptyDir: {}
      containers:
      - name: mysql
        image: mysql:5.7.20
        args:
        - --lower_case_table_names=1
        - --skip-ssl
        - --character_set_server=utf8mb4
        - --explicit_defaults_for_timestamp
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: data
          mountPath: /var/lib/mysql/
---
apiVersion: v1
kind: Service
metadata:
  name: blog-mysql
  namespace: default
spec:
  selector:
    app: blog-mysql
  ports:
  - port: 3306
