deploy/blog/blog-service.yml
apiVersion: v1
kind: Service
metadata:
  name: blog
  namespace: default
  labels:
    app: blog
spec:
  selector:
    app: blog
  type: ClusterIP
  ports:
  - name: http
    port: 8080
