deploy/blog/blog-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: blog
  namespace: default
spec:
  rules:
  - host: blog.default.192.168.99.100.nip.io
    http:
      paths:
      - path: /.*
        backend:
          serviceName: blog
          servicePort: 8080
